@@ -582,7 +582,7 @@ int target_handle_connect(struct ptlrpc_request *req, svc_handler_t handler)
         int rc = 0, abort_recovery;
         struct obd_connect_data *data;
         int size[2] = { sizeof(struct ptlrpc_body), sizeof(*data) };
-        lnet_nid_t client_nid = 0;
+        lnet_nid_t *client_nid = NULL;
         ENTRY;
 
         OBD_RACE(OBD_FAIL_TGT_CONN_RACE);
@@ -794,7 +794,7 @@ int target_handle_connect(struct ptlrpc_request *req, svc_handler_t handler)
         /* Tell the client if we support replayable requests */
         if (target->obd_replayable)
                 lustre_msg_add_op_flags(req->rq_repmsg, MSG_CONNECT_REPLAYABLE);
-        client_nid = req->rq_peer.nid;
+        client_nid = &req->rq_peer.nid;
 
         if (export == NULL) {
                 if (target->obd_recovering) {
@@ -809,7 +809,7 @@ int target_handle_connect(struct ptlrpc_request *req, svc_handler_t handler)
                 } else {
  dont_check_exports:
                         rc = obd_connect(&conn, target, &cluuid, data,
-                                         &client_nid);
+                                         client_nid);
                 }
         } else {
                 rc = obd_reconnect(export, target, &cluuid, data);
