@@ -235,7 +235,7 @@ int mds_join_file(struct mds_update_record *rec, struct ptlrpc_request *req,
 
 /* mds/mds_fs.c */
 int mds_client_add(struct obd_device *obd, struct obd_export *exp,
-                   int cl_off, lnet_nid_t client_nid);
+                   int cl_off, void *localdata);
 int mds_client_free(struct obd_export *exp);
 int mds_obd_create(struct obd_export *exp, struct obdo *oa,
                    struct lov_stripe_md **ea, struct obd_trans_info *oti);
